awx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ansible-awx.devopstips.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awx-demo-service
                port:
                  number: 80
